welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:5: error: ';' expected but 'return' found.
	if (nums(i+1)>n) {nums(i+1)=n} return n
                                       ^